k8s/backend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-spring
spec:
  selector:
    app: backend-spring
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-spring
spec:
  selector:
    matchLabels:
      app: backend-spring
  replicas: 1
  template:
    metadata:
      labels:
        app: backend-spring
    spec:
      containers:
        - name: backend-spring
          image: teddy2468/gestionstagesalternances-backend-spring:latest
          ports:
            - containerPort: 8080
