k8s/frontend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-angular
spec:
  selector:
    app: frontend-angular
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-angular
spec:
  selector:
    matchLabels:
      app: frontend-angular
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend-angular
    spec:
      containers:
        - name: frontend-angular
          image: teddy2468/gestionstagesalternances-frontend-angular:latest
          ports:
            - containerPort: 80
