k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gestionstagesalternances-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: gestionstagesalternances.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-angular-service
                port:
                  number: 80

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-spring-service
                port:
                  number: 8080
